--- a/painel/central/templates/central/includes/sidebar.html
+++ b/painel/central/templates/central/includes/sidebar.html
@@ -3,7 +3,7 @@
 <div class="vertical-menu">
     <div class="h-100 d-flex flex-column">
         <!-- Sidebar Header (Minimizable) -->
-        <div class="sidebar-header text-white p-3 d-flex justify-content-between align-items-center" style="margin-top: 5px">
+        <div class="sidebar-header text-white p-3 d-flex justify-content-between align-items-center" style="margin-right: 5px" >
             <!-- Substituímos o título e botão pelo logo e favicon -->
             <img id="sidebar-logo" src="{% static 'img/logo.svg' %}" alt="Logo" class="logo-expanded" />
             <img id="sidebar-favicon" src="{% static 'img/favicon.png' %}" alt="Favicon" class="logo-minimized" style="display: none;" />
