--- a/painel/central/static/css/navbar.css
+++ b/painel/central/static/css/navbar.css
@@ -1,22 +1,22 @@
 /* Navbar com sidebar expandida */
 .navbar-header {
-    width: calc(100vw - 240px) !important; /* Calcula a largura da navbar com base no viewport e na sidebar expandida */
-    margin-left: 240px !important; /* Move a navbar para a direita da sidebar */
-    transition: all 0.6s ease !important; /* Transição suave ao minimizar/maximizar */
-    background-color: #343a40 !important; /* Mantém o background da navbar */
+    width: calc(100vw - 240px) !important;
+    margin-left: 240px !important;
+    transition: all 0.6s ease !important;
+    background-color: #343a40 !important;
     top: 0 !important;
     left: 0 !important;
     position: fixed !important;
     z-index: 1000 !important;
     padding: 10px 20px !important;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
-    overflow: hidden !important; /* Garante que o conteúdo da navbar não ultrapasse seus limites */
+    overflow: hidden !important;
 }
 
 /* Navbar quando a sidebar está minimizada */
 .vertical-menu.minimized + .main-content .navbar-header {
-    width: calc(100vw - 60px) !important; /* Calcula a largura da navbar com base no viewport e na sidebar minimizada */
-    margin-left: 60px !important; /* Ajusta a margem para a sidebar minimizada */
+    width: calc(100vw - 60px) !important;
+    margin-left: 60px !important;
     transition: all 0.3s ease !important;
 }
 
@@ -100,15 +100,17 @@
 
 /* Navbar com sidebar minimizada */
 .navbar-header.sidebar-minimized {
-    width: calc(100vw - 60px) !important; /* Ajusta a largura quando a sidebar é minimizada */
-    margin-left: 60px !important; /* Ajusta a margem quando a sidebar é minimizada */
+    width: calc(100vw - 60px) !important;
+    margin-left: 60px !important;
     transition: all 0.3s ease !important;
 }
 
-/* Responsividade para dispositivos móveis */
+/* Ajustes para responsividade */
 @media (max-width: 768px) {
     .navbar-header {
-        width: 100vw ; /* Ocupa 100% da largura em dispositivos móveis */
-        margin-left: 0; /* Sem margem */
+        width: 100vw !important;
+        margin-left: 0 !important;
+        padding: 10px !important;
+        transition: all 0.3s ease !important;
     }
 }
