--- a/painel/central/templates/central/includes/navbar.html
+++ b/painel/central/templates/central/includes/navbar.html
@@ -1,4 +1,3 @@
-{% load static %}
 <header id="page-topbar">
     <div class="navbar-header d-flex justify-content-between">
         <!-- Botão de Minimizar Sidebar -->
@@ -7,7 +6,8 @@
         </button>
 
         <!-- App Search-->
-        <form class="app-search d-none d-lg-block">
+        <!-- Remover a classe 'd-none d-lg-block' para permitir a exibição no mobile -->
+        <form class="app-search">
             <div class="position-relative">
                 <input type="text" class="form-control" placeholder="Search...">
                 <span class="material-icons">search</span>
@@ -16,22 +16,7 @@
 
         <!-- Ícones de interação -->
         <div class="d-flex align-items-center">
-            <!-- Language Dropdown -->
-            <div class="dropdown d-inline-block">
-                <button type="button" class="btn header-item waves-effect" data-bs-toggle="dropdown">
-                    <i class="material-icons">language</i> PT
-                </button>
-            </div>
-
-            <!-- Notifications -->
-            <div class="dropdown d-inline-block">
-                <button type="button" class="btn header-item noti-icon waves-effect">
-                    <i class="material-icons">notifications</i>
-                    <span class="noti-dot"></span>
-                </button>
-            </div>
-
-            <!-- App Grid -->
+            <!-- Outros ícones e menus dropdown mantidos -->
             <div class="dropdown d-inline-block">
                 <button type="button" class="btn header-item waves-effect">
                     <i class="material-icons">apps</i>
