--- a/painel/central/templates/central/includes/navbar.html
+++ b/painel/central/templates/central/includes/navbar.html
@@ -1,12 +1,11 @@
 <header id="page-topbar">
     <div class="navbar-header d-flex justify-content-between">
         <!-- Botão de Minimizar Sidebar -->
-        <button id="navbar-menu-toggle" class="btn header-item">
+        <button id="vertical-menu-btn" class="btn header-item">
             <i class="material-icons">menu</i>
         </button>
 
         <!-- App Search-->
-        <!-- Remover a classe 'd-none d-lg-block' para permitir a exibição no mobile -->
         <form class="app-search">
             <div class="position-relative">
                 <input type="text" class="form-control" placeholder="Search...">
@@ -16,7 +15,6 @@
 
         <!-- Ícones de interação -->
         <div class="d-flex align-items-center">
-            <!-- Outros ícones e menus dropdown mantidos -->
             <div class="dropdown d-inline-block">
                 <button type="button" class="btn header-item waves-effect">
                     <i class="material-icons">apps</i>
