--- a/painel/central/templates/central/main/dashboard.html
+++ b/painel/central/templates/central/main/dashboard.html
@@ -12,7 +12,7 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12" style="margin-top: 10%">
                 <h4 class="text-center mt-4">Tabela da Liga Brasileira</h4>
             </div>
         </div>
