--- a/painel/central/templates/base.html
+++ b/painel/central/templates/base.html
@@ -114,8 +114,7 @@
 
             <!-- Master -->
             <script src="{% static 'js/main.js' %}"></script>
-            <script src="{% static 'js/sidebar.js' %}"></script>
-            <script src="{% static 'js/navbar.js' %}"></script>
+            <script src="{% static 'js/side_nav.js' %}"></script>
             <script src="{% static 'js/load_league_table.js' %}"></script>
             <!-- Toasts -->
             {% if messages %}
