--- a/painel/central/templates/central/includes/navbar.html
+++ b/painel/central/templates/central/includes/navbar.html
@@ -2,22 +2,15 @@
 <header id="page-topbar">
     <div class="navbar-header d-flex justify-content-between align-items-center">
         <!-- Botão de Minimizar Sidebar -->
-<<<<<<< Updated upstream
-        <button id="navbar-menu-toggle" class="btn header-item">
-            <i class="material-icons">menu</i>
-        </button>
-=======
         <div class="d-flex align-items-center">
-            <img id="mobile-favicon" src="{% static 'img/favicon.png' %}" alt="Favicon" class="logo-minimized-mobile" style="display: none;" />
+            <img id="mobile-favicon" src="{% static 'img/favicon.png' %}" alt="Favicon" class="logo-minimized-mobile" " />
             <button id="vertical-menu-btn" class="btn header-item">
                 <i class="material-icons">menu</i>
             </button>
-            <img id="mobile-favicon" src="{% static 'img/favicon.png' %}" alt="Favicon" class="logo-minimized-mobile" style="display: none;" />
         </div>
->>>>>>> Stashed changes
 
         <!-- App Search-->
-        <form class="app-search d-none d-lg-block">
+        <form class="app-search">
             <div class="position-relative">
                 <input type="text" class="form-control" placeholder="Search...">
                 <span class="material-icons">search</span>
@@ -26,26 +19,7 @@
 
         <!-- Ícones de interação -->
         <div class="d-flex align-items-center">
-<<<<<<< Updated upstream
-            <!-- Language Dropdown -->
-            <div class="dropdown d-inline-block">
-                <button type="button" class="btn header-item waves-effect" data-bs-toggle="dropdown">
-                    <i class="material-icons">language</i> PT
-                </button>
-            </div>
-
-            <!-- Notifications -->
-            <div class="dropdown d-inline-block">
-                <button type="button" class="btn header-item noti-icon waves-effect">
-                    <i class="material-icons">notifications</i>
-                    <span class="noti-dot"></span>
-                </button>
-            </div>
-
-            <!-- App Grid -->
-=======
             <!-- Outros ícones e menus dropdown mantidos -->
->>>>>>> Stashed changes
             <div class="dropdown d-inline-block">
                 <button type="button" class="btn header-item waves-effect">
                     <i class="material-icons">apps</i>
