--- a/painel/central/templates/central/main/dashboard.html
+++ b/painel/central/templates/central/main/dashboard.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="main-content">
+<div class="main-content" style="margin-top: 8%">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
