--- a/painel/central/static/css/sidebar.css
+++ b/painel/central/static/css/sidebar.css
@@ -5,37 +5,49 @@
     align-items: center;
     height: 70px;
     padding: 0 20px;
-    background-color: var(--bs-gray-200);
+    background-color: #343a40; /* Cinza escuro */
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 1000;
-    transition: all 0.3s ease;
+    transition: all 0.6s ease;
 }
 
 /* Ajuste da navbar quando a sidebar está minimizada */
 .navbar-header.sidebar-minimized {
     width: calc(100vw - 80px);
-    transition: all 0.3s ease;
+    transition: all 0.6s ease;
 }
 
 /* Navbar normal quando a sidebar está expandida */
 .navbar-header {
     width: calc(100vw - 250px);  /* A navbar ocupará o restante do espaço */
-    transition: all 0.3s ease;
+    transition: all 0.6s ease;
+}
+
+.navbar-header .logo img {
+    max-height: 24px;
+}
+
+.header-item {
+    color: var(--bs-body-color);
+    font-size: 20px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
 }
 
 /* Sidebar Style */
 .vertical-menu {
     width: 250px;
-    background-color: var(--bs-gray-300);
+    background-color: #343a40; /* Cinza escuro */
     position: fixed;
     top: 70px;
     bottom: 0;
     left: 0;
     z-index: 1001;
-    transition: all 0.3s ease;
+    transition: all 0.6s ease;
     overflow: auto;
 }
 
@@ -52,9 +64,9 @@
     display: flex;
     align-items: center;
     padding: 15px;
-    color: var(--bs-body-color);
+    color: white;
     text-decoration: none;
-    transition: all 0.3s ease;
+    transition: all 0.6s ease;
 }
 
 .vertical-menu ul li a i {
@@ -65,23 +77,35 @@
     display: none;
 }
 
+/* Logo da sidebar ajustada para caber corretamente */
+.logo-expanded {
+    max-width: 100%;
+    height: auto;
+}
+
+.logo-minimized {
+    display: none;
+    max-width: 40px; /* Ajuste conforme necessário */
+    height: auto;
+}
+
+/* Exibe a logo minimizada quando a sidebar está minimizada */
+.vertical-menu.minimized .logo-expanded {
+    display: none;
+}
+
+.vertical-menu.minimized .logo-minimized {
+    display: block;
+}
+
 /* Content adjustments when sidebar is minimized */
 .main-content {
-    transition: all 0.3s ease;
+    transition: all 0.6s ease;
     margin-left: 250px;
 }
 
 .main-content.sidebar-minimized {
     margin-left: 80px;
-}
-
-/* Favicon visibility in mobile */
-.logo-minimized-mobile {
-    display: none;
-
-    width: 14px !important;
-    height: 14px !important;
-    margin-left: 10px; /* Espaço entre o botão e o favicon */
 }
 
 /* Mobile Adjustments */
@@ -102,8 +126,16 @@
         width: 100vw;
     }
 
+    /* Favicon visibility in mobile */
+    .logo-minimized-mobile {
+        display: none;
+        width: 24px;
+        height: 24px;
+        margin-left: 10px;
+    }
+
     /* Mostrar o favicon no mobile */
     .logo-minimized-mobile {
-        display: inline-block;  /* Mostra o favicon no mobile */
+        display: inline-block;
     }
 }
